src/test/deca/syntax/invalid/created/class_without/method_noSignature.deca
// Description:
//      Utilisation d'une methode sans signature
// Resultats:
//      Error syntax Ligne 7 : no viable alternative at input 'intgetX{'

class A {
    int getX{}
}